Add caching using Redis

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,2 +1,13 @@
+# MongoDB configuration
 spring.data.mongodb.uri=mongodb://todo:list@localhost:27017
 spring.data.mongodb.database=mongodb
+
+# Redis configuration
+cache.ttl.item=3
+cache.ttl.items=3
+
+spring.cache.type=redis
+spring.cache.cache-names=item,items
+
+spring.redis.host=localhost
+spring.redis.port=6379
