--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 # To refresh the image, regenerate the JAR by using:
 # mvn clean package -o
 
-FROM openjdk:11-jre
+FROM adoptopenjdk/openjdk16:alpine
 
 COPY ./target/todo-list-0.0.1-SNAPSHOT.jar todo-list.jar
 
