--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,23 @@
 version: '3'
-services:
 
+services:
   api:
     build:
       context: ./api/
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
     environment:
       spring_data_mongodb_uri: mongodb://todo:list@mongodb:27017
+      spring_redis_host: redis
+      cache_ttl_item: 15
+      cache_ttl_items: 15
     networks:
       - mongo
+      - redis
     depends_on:
       - mongodb
+      - redis
 
   mongodb:
     image: mongo:5.0
@@ -25,6 +30,7 @@ services:
       - mongo
     volumes:
       - ./data:/data/db
+    restart: always
 
   mongo-express:
     image: mongo-express
@@ -40,5 +46,14 @@ services:
       - mongodb
     restart: always
 
+  redis:
+    image: redis:6-alpine
+    ports:
+      - 6379:6379
+    networks:
+      - redis
+    restart: always
+
 networks:
   mongo:
+  redis:
