Add metrics endpoint for prometheus

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Metrics configuration
+management.endpoints.web.exposure.include=health,info,prometheus
+
 # MongoDB configuration
 spring.data.mongodb.uri=mongodb://todo:list@localhost:27017
 spring.data.mongodb.database=mongodb
